--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,5 @@ jobs:
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - run: |
-        docker build . -t ewagner14cscc.azurecr.io/week10-rmehta:test1
-        docker push ewagner14cscc.azurecr.io/week10-rmehta:test1
+        docker build . -t ewagner14cscc.azurecr.io/week10-rmehta:ranju1
+        docker push ewagner14cscc.azurecr.io/week10-rmehta:ranju1
